[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lego-collection"
version = "2.0.0"
description = "Build a local SQLite database of Rebrickable LEGO data and your personal set lists"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sergey Kondrikov" }
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
]

[project.scripts]
lego-collection = "lego_collection.cli:main"

[project.optional-dependencies]
test = ["pytest>=7", "pytest-mock>=3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]